add link and example

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <div class="row">
                 <div class="col">
                     <p>
-                        Made with ♡ by <a href="#">Cemu0</a> ·
-                        <a href="#">How it work?</a>
+                        Made with ♡ by <a href="https://github.com/Cemu0">Cemu0</a> ·
+                        <a href="https://github.com/Cemu0/vCardShare">How it work?</a>
                     </p>
                 </div>
             </div>
