change text promp

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </button>
                     </div>
                     <div class="toast-body">
-                        Please open this page in a regular web browser to download the file.
+                        Please open this page in a regular web browser to download the contact card.
                     </div>
                 </div>
         </div>
