--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
                 <!-- Then put toasts within -->
                 <div class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                     <div class="toast-header">
-                        <strong class="mr-auto">Sorry!</strong>
+                        <strong class="mr-auto">Warning!</strong>
                         <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                         </button>
                     </div>
                     <div class="toast-body">
-                        Please open this page in a regular web browser to download the contact card.
+                        If you cannot save the file, please open this page in a regular web browser to download the contact card.
                     </div>
                 </div>
         </div>
@@ -201,6 +201,7 @@
                 messsage = "Scroll down at the end of card to save my contact information."
             }
             isRunningStandalone(messsage, function(result) {
+                document.getElementById("alert-cover").style.display = "block";
                 makeVCard(info);
             }, function() {
                 document.getElementById("alert-cover").style.display = "block";
