--- a/encrypt.html
+++ b/encrypt.html
@@ -92,7 +92,7 @@
         const fake_info = {
             "password": "TKf2GB1aG",
             "name": "John Doe",
-            "info": "Doe;John;Mr;",
+            "info": "Doe;John;",
             "nickname": "JD",
             "birthday": "2000-01-01",
             "cardInfo": "Two giants live in Britain's land\n John Doe and Richard Roe, \n Who always travel hand in hand, \n John Doe and Richard Roe.",
